--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         #result-container {
             text-align: center;
         }
+
+        /* Media Query to hide the phone camera button on larger screens */
+        @media (min-width: 768px) {
+            #open-phone-btn {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col md:flex-row">
@@ -51,8 +58,9 @@
             <i class="fas fa-camera mr-2"></i> Open Webcam
         </button>
 
+        <!-- Phone camera button that will only be shown on mobile devices -->
         <button id="open-phone-btn" class="w-full bg-purple-500 text-white py-2 px-4 rounded-md hover:bg-purple-600 transition duration-150 mb-2">
-            <i class="fas fa-mobile-alt mr-2"></i> Open Phone camera
+            <i class="fas fa-mobile-alt mr-2"></i> Open Phone Camera
         </button>
 
         <button id="predict-btn" class="w-full bg-red-500 text-white py-2 px-4 rounded-md hover:bg-red-600 transition duration-150 disabled:bg-gray-400 disabled:cursor-not-allowed" disabled>
@@ -60,11 +68,8 @@
         </button>
     </div>
 
-    <!-- Main content -->
-     <div class="text-blue-900 text-lg font-bold">
-        <h1>POTATO</h1>
 
-     </div>
+    <!-- Main content -->
     <div class="flex-grow p-4">
         <div id="preview-container" class="mb-6 hidden">
             <h2 class="text-lg font-semibold mb-2 text-gray-800">Image Preview:</h2>
@@ -80,8 +85,8 @@
         </div>
 
         <div id="result-container" class="mt-6 hidden">
-            <h2 class="text-lg font-semibold mb-2 text-gray-800">Prediction Result:</h2>
-            <p id="result-text" class="text-gray-600"></p>
+            <h2 class="text-lg font-semibold mb-2 text-gray-900">Prediction Result:</h2>
+            <p id="result-text" class="text-gray-900"></p>
         </div>
     </div>
 
@@ -116,8 +121,15 @@
             }
         });
 
-        openPhoneBtn.addEventListener('click', () => {
-            alert('Open phone camera functionality not implemented in this demo.');
+        openPhoneBtn.addEventListener('click', async () => {
+            try {
+                webcamStream = await navigator.mediaDevices.getUserMedia({ video: true });
+                webcam.srcObject = webcamStream;
+                webcamContainer.classList.remove('hidden');
+                previewContainer.classList.add('hidden');
+            } catch (error) {
+                console.error('Error accessing phone camera:', error);
+            }
         });
 
         captureBtn.addEventListener('click', () => {
@@ -153,10 +165,6 @@
             e.preventDefault();
             dropZone.classList.remove('border-blue-500');
             handleFile(e.dataTransfer.files[0]);
-        });
-
-        fileUpload.addEventListener('change', (e) => {
-            handleFile(e.target.files[0]);
         });
 
         function handleFile(file) {
