--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             text-align: center;
         }
 
-        /* Media Query to hide the phone camera button on larger screens */
+        /* Hide the phone camera button on larger screens */
         @media (min-width: 768px) {
             #open-phone-btn {
                 display: none;
@@ -58,7 +58,6 @@
             <i class="fas fa-camera mr-2"></i> Open Webcam
         </button>
 
-        <!-- Phone camera button that will only be shown on mobile devices -->
         <button id="open-phone-btn" class="w-full bg-purple-500 text-white py-2 px-4 rounded-md hover:bg-purple-600 transition duration-150 mb-2">
             <i class="fas fa-mobile-alt mr-2"></i> Open Phone Camera
         </button>
@@ -68,7 +67,6 @@
         </button>
     </div>
 
-
     <!-- Main content -->
     <div class="flex-grow p-4">
         <div id="preview-container" class="mb-6 hidden">
@@ -77,7 +75,7 @@
         </div>
 
         <div id="webcam-container" class="mb-6 hidden">
-            <h2 class="text-lg font-semibold mb-2 text-gray-800">Webcam:</h2>
+            <h2 class="text-lg font-semibold mb-2 text-gray-800">Phone Camera:</h2>
             <video id="webcam" class="w-full max-w-2xl mx-auto rounded-md" autoplay></video>
             <button id="capture-btn" class="mt-2 bg-green-500 text-white py-2 px-4 rounded-md hover:bg-green-600 transition duration-150">
                 <i class="fas fa-camera mr-2"></i> Capture Photo
@@ -91,47 +89,36 @@
     </div>
 
     <script>
-        const dropZone = document.getElementById('drop-zone');
-        const fileUpload = document.getElementById('file-upload');
+        const openPhoneBtn = document.getElementById('open-phone-btn');
+        const webcam = document.getElementById('webcam');
+        const webcamContainer = document.getElementById('webcam-container');
+        const captureBtn = document.getElementById('capture-btn');
         const previewContainer = document.getElementById('preview-container');
         const previewImage = document.getElementById('preview-image');
         const predictBtn = document.getElementById('predict-btn');
-        const resultContainer = document.getElementById('result-container');
-        const resultText = document.getElementById('result-text');
-        const webcam = document.getElementById('webcam');
-        const captureBtn = document.getElementById('capture-btn');
-        const webcamContainer = document.getElementById('webcam-container');
-        const openFileBtn = document.getElementById('open-file-btn');
-        const openWebcamBtn = document.getElementById('open-webcam-btn');
-        const openPhoneBtn = document.getElementById('open-phone-btn');
-
-        let selectedFile = null;
         let webcamStream = null;
+        let selectedFile = null;
 
-        openFileBtn.addEventListener('click', () => fileUpload.click());
-
-        openWebcamBtn.addEventListener('click', async () => {
-            try {
-                webcamStream = await navigator.mediaDevices.getUserMedia({ video: true });
-                webcam.srcObject = webcamStream;
-                webcamContainer.classList.remove('hidden');
-                previewContainer.classList.add('hidden');
-            } catch (error) {
-                console.error('Error accessing webcam:', error);
-            }
-        });
-
+        // Function to open phone camera (with back camera enabled)
         openPhoneBtn.addEventListener('click', async () => {
             try {
-                webcamStream = await navigator.mediaDevices.getUserMedia({ video: true });
+                const constraints = {
+                    video: {
+                        facingMode: { exact: "environment" } // Request back camera
+                    }
+                };
+
+                webcamStream = await navigator.mediaDevices.getUserMedia(constraints);
                 webcam.srcObject = webcamStream;
                 webcamContainer.classList.remove('hidden');
                 previewContainer.classList.add('hidden');
             } catch (error) {
-                console.error('Error accessing phone camera:', error);
+                console.error('Error accessing back camera:', error);
+                alert('Unable to access the phone camera.');
             }
         });
 
+        // Capture photo from the webcam
         captureBtn.addEventListener('click', () => {
             const canvas = document.createElement('canvas');
             canvas.width = webcam.videoWidth;
@@ -140,71 +127,15 @@
             context.drawImage(webcam, 0, 0, canvas.width, canvas.height);
 
             canvas.toBlob((blob) => {
-                selectedFile = new File([blob], 'webcam-photo.jpg', { type: 'image/jpeg' });
+                selectedFile = new File([blob], 'phone-photo.jpg', { type: 'image/jpeg' });
                 previewImage.src = canvas.toDataURL('image/jpeg');
                 previewContainer.classList.remove('hidden');
                 webcamContainer.classList.add('hidden');
                 predictBtn.disabled = false;
 
+                // Stop the camera stream after capturing the photo
                 webcamStream.getTracks().forEach(track => track.stop());
             });
-        });
-
-        dropZone.addEventListener('click', () => fileUpload.click());
-
-        dropZone.addEventListener('dragover', (e) => {
-            e.preventDefault();
-            dropZone.classList.add('border-blue-500');
-        });
-
-        dropZone.addEventListener('dragleave', () => {
-            dropZone.classList.remove('border-blue-500');
-        });
-
-        dropZone.addEventListener('drop', (e) => {
-            e.preventDefault();
-            dropZone.classList.remove('border-blue-500');
-            handleFile(e.dataTransfer.files[0]);
-        });
-
-        function handleFile(file) {
-            if (file && file.type.startsWith('image/')) {
-                selectedFile = file;
-                const reader = new FileReader();
-                reader.onload = (e) => {
-                    previewImage.src = e.target.result;
-                    previewContainer.classList.remove('hidden');
-                    webcamContainer.classList.add('hidden');
-                    predictBtn.disabled = false;
-                };
-                reader.readAsDataURL(file);
-            }
-        }
-
-        predictBtn.addEventListener('click', async () => {
-            if (!selectedFile) return;
-
-            const formData = new FormData();
-            formData.append('file', selectedFile);
-
-            try {
-                const response = await fetch('http://localhost:5500/predict', {
-                    method: 'POST',
-                    body: formData
-                });
-
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-
-                const result = await response.json();
-                resultText.textContent = `Class: ${result.class}, Confidence: ${(result.confidence * 100).toFixed(2)}%`;
-                resultContainer.classList.remove('hidden');
-            } catch (error) {
-                console.error('Error:', error);
-                resultText.textContent = 'An error occurred during prediction.';
-                resultContainer.classList.remove('hidden');
-            }
         });
     </script>
 </body>
