--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             display: none;
         }
     }
+
+        @media (max-width: 768px) {
+            #preview-image {
+                width: 250px;
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col md:flex-row">
