--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         try {
             // Send the file to the prediction endpoint
-            const response = await fetch('http://localhost:5500/predict', {
+            const response = await fetch('https://potato-disease-backend.vercel.app/predict'', {
                 method: 'POST',
                 body: formData
             });
